# PPgram-api

./: .env  .gitignore  ;  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml
.github/workflows/: docker-image.yml
benchmark/: build.zig  build.zig.zon
benchmark/src/: main.zig
conf/: cassandra.yaml  scylla.yaml  server.yaml
docs/: basics.md
examples/: api.py  fetch.py  pavlo.py  register.py  send_message.py  simple.py
src/: main.rs
src/db/: bucket.rs  connection.rs  db.rs  init.rs  messages.rs  mod.rs  user.rs
src/db/chat/: chats.rs  drafts.rs  hashes.rs  messages.rs  mod.rs
src/db/internal/: enums.rs  error.rs  hasher.rs  mod.rs  validate.rs
src/fs/: document.rs  hasher.rs  media.rs  mod.rs
src/fs/helpers/: compress.rs  fetcher.rs  mod.rs  uploader.rs
src/server/: connection.rs  message.rs  mod.rs  pending_requests.rs  server.rs  session.rs
src/server/message/: auth_message.rs  builder.rs  handler.rs  media.rs  message.rs  mod.rs
src/server/message/handlers/: auth.rs  check.rs  edit.rs  fetch.rs  files_handler.rs  json_handler.rs  mod.rs  processor.rs  quic_handler.rs  reqid_tracker.rs  send.rs  tcp_handler.rs
src/server/message/methods/: auth.rs  bind.rs  check.rs  edit.rs  fetch.rs  join.rs  mod.rs  new.rs  send.rs
src/server/message/types/: chat.rs  edit.rs  files.rs  message.rs  metadata.rs  mod.rs  user.rs
src/server/message/types/authentication/: message.rs
src/server/message/types/error/: error.rs
tests/: auth.rs  join.rs  register.rs  send_fetch.rs
tests/common/: mod.rs
(+26 files in other folders)
