[package]
name = "PPgram-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
async-trait = "0.1.50"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
cassandra-cpp = "3.0.2"
lazy_static = "1.5.0"
rand = "0.8.5"