[package]
name = "ppgram-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
cassandra-cpp = "3.0.2"
rand = "0.8.5"
sha2 = "0.10.0"
base64 = "0.22.1"
hex = "0.4.3"
argon2 = "0.5.0"
async-trait = "0.1.83"
moro = "0.4.0"
rcgen = "0.13.1"
webrtc = "0.11.0"
dashmap = "6.1.0"

[profile.release]
strip=true
opt-level = "z"
